Add check server exists and add new api
